# empc

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md
.github/workflows/: tests.yml
assets/: remote.css  sakura.css  style.css
src/: main.rs
src/backend/: mod.rs  robot.rs  shutdown.rs
src/backend/local/: implementation.rs  mod.rs
src/backend/remote/: dummy.rs  mod.rs
src/backend/remote/linux/: key.rs  mod.rs  robot.rs
src/frontend/: mod.rs  shutdown.rs
src/frontend/local/: mod.rs
src/frontend/playback/: mod.rs
src/frontend/remote/: controls.rs  mod.rs  screen.rs  utils.rs
